# odiff_py

./: .all-contributorsrc  .cruft.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  changelog.md  hatch_build.py  pyproject.toml  requirements_pinned.txt
.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
docs/: Makefile  api_docs.md  conf.py  index.md  installation.md  make.bat  usage.ipynb  usage.md
odiff_py/: __init__.py  __main__.py  cli.py  utils.py  wrapper.py
scripts/: compile-odiff.sh  setup-ocamel-build-tools.sh
tests/: __init__.py  test_cli.py  test_utils.py  test_wrapper.py
tests/data/: diff-result.md  help.txt  tiger-compare.apng
